--- a/AirQualityApi/appsettings.json
+++ b/AirQualityApi/appsettings.json
@@ -6,21 +6,24 @@
     }
   },
   "AllowedHosts": "*",
-    "Serilog": {
-        "Using": [ "Serilog.Sinks.File" ],
-        "MinimumLevel": {
-            "Default": "Information"
-        },
-        "WriteTo": [
-            {
-                "Name": "File",
-                "Args": {
-                    "path": "../logs/airqualityapi-.log",
-                    "rollingInterval": "Day",
-                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
-                }
-            }
-        ]
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../logs/airqualityapi-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
+        }
+      }
+    ]
+  },
+  "ConnectionStrings": {
+    "DbConnection": "Server=(localdb)\\mssqllocaldb;Database=AirQualityData;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
 
